--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>RAKSHAK</title>
-    <link rel="canonical" href="https://rakshakbhatkar.github.io/">
+    <link rel="canonical" href="https://rakshak53.github.io/">
     <meta name="theme-color" content="coral">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,14 +21,14 @@
  
 <div style="padding:0px;text-align:center;">
 
-    <h1><a href="https://rakshakbhatkar.github.io" style="color:coral;text-decoration:none;">rakshak</a></h1>
+    <h1><a href="https://rakshak53.github.io" style="color:coral;text-decoration:none;">rakshak</a></h1>
 </div>
 
 <hr/>
 <div style="
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);border-radius:5px;background-color:#fff;padding:10px;margin:10px;font-family: 'Open Sans', sans-serif;">
 <h3><a href="https://rakshakbhatkar.guthub.io/post/monthly-horoscope-april-marathi.html" style="color:#000;text-decoration:none;">Monthly Horoscope April Marathi</a></h3>
-<span style="vertical-align:middle;font-size:14px;font-weight:bold;font-style:italic;color:#a3a3a3">Posted by : <a href="#" style="color:coral;text-decoration:none;">Admin</a><br/>Date : 17/04/2021 <br/> 
+<span style="vertical-align:middle;font-size:14px;font-weight:bold;font-style:italic;color:#a3a3a3">Posted by : <a href="#" style="color:coral;text-decoration:none;">rakshak</a><br/>Date : 17/04/2021 <br/> 
 </span>
 <p style="font-size:19px;font-family:'Noto Sans Modi', sans-serif;"><a href="https://rakshak.tech/amp/amp.html" style="color:black;text-decoration:none;">𑘦𑘲𑘯𑘪𑘲𑘜𑘹 𑘪 𑘃𑘝𑘨𑘰𑘽𑘡𑘰 𑘝𑘲 𑘟𑘹𑘜𑘹 𑘧𑘰𑘭𑘽𑘤𑘽𑘠𑘲𑘓𑘿𑘧𑘰 𑘭𑘿𑘪𑘰𑘝𑘽𑘝𑘿𑘨𑘿𑘧𑘰𑘓𑘰 𑘭𑘦𑘰𑘪𑘹𑘫 𑘮𑘻𑘝𑘻. 𑘢𑘿𑘨𑘝𑘿𑘧𑘹𑘎𑘰𑘭 𑘭𑘦𑘰𑘕𑘰𑘓𑘰 𑘊𑘎 𑘑𑘘𑘎 𑘧𑘰 𑘡𑘰𑘝𑘿𑘧𑘰𑘡𑘹 𑘭𑘰𑘦𑘰𑘕𑘲𑘎 𑘭𑘳𑘨𑘎𑘿𑘬𑘲𑘝𑘝𑘰 𑘢𑘿𑘨𑘰𑘢𑘿𑘝 𑘎𑘨𑘳𑘡 𑘑𑘹𑘜𑘿𑘧𑘰𑘓𑘰 𑘀𑘠𑘲𑘎𑘰𑘨 𑘁𑘮𑘹 𑘁𑘜𑘲 𑘨𑘰𑘬𑘿𑘘𑘿𑘨𑘲𑘧 𑘢𑘿𑘨𑘧𑘝𑘿𑘡 𑘪 𑘁𑘽𑘝𑘨𑘨𑘰𑘬𑘿𑘘𑘿𑘨𑘲𑘧 𑘭𑘮𑘎𑘰𑘨𑘿𑘧 𑘧𑘰𑘽𑘓𑘿𑘧𑘰 𑘟𑘿𑘪𑘰𑘨𑘹 𑘪 𑘢𑘿𑘨𑘝𑘿𑘧𑘹𑘎 𑘨𑘰𑘬𑘿𑘘𑘿𑘨𑘰𑘓𑘿𑘧𑘰 𑘪𑘿𑘧𑘪𑘭𑘿𑘞𑘹𑘡𑘳𑘭𑘰𑘨 𑘪 𑘭𑘰𑘠𑘡𑘭𑘽𑘦𑘝𑘲𑘡𑘳𑘭𑘰𑘨 𑘁𑘢𑘩𑘿𑘧𑘰 𑘢𑘿𑘨𑘝𑘲𑘬𑘿𑘙𑘹𑘭 𑘪 𑘁𑘢𑘩𑘿𑘧𑘰 𑘪𑘿𑘧𑘎𑘿𑘝𑘲𑘦𑘝𑘿𑘪𑘰𑘓𑘿𑘧𑘰 𑘦𑘳𑘎𑘿𑘝 𑘪𑘲𑘎𑘰𑘭𑘰𑘭𑘰𑘙𑘲 𑘀𑘡𑘲𑘪𑘰𑘨𑘿𑘧 𑘀𑘭𑘩𑘹𑘩𑘹 𑘁𑘨𑘿𑘞𑘲𑘎, 𑘭𑘰𑘦𑘰𑘕𑘲𑘎 𑘪 𑘭𑘰𑘽𑘭𑘿𑘎𑘿𑘨𑘲𑘝𑘲𑘎 𑘀𑘠𑘲𑘎𑘰𑘨 𑘭𑘽𑘢𑘰𑘟𑘡 𑘎𑘨𑘜𑘿𑘧𑘰𑘓𑘰 𑘮𑘎𑘿𑘎 𑘁𑘮𑘹. 𑘪𑘰𑘕𑘪𑘲 𑘦𑘨𑘿𑘧𑘰𑘽𑘟𑘰 𑘀𑘭𑘩𑘹𑘩𑘹 𑘎𑘰𑘦𑘰𑘓𑘹 𑘝𑘰𑘭 𑘪 𑘙𑘨𑘰𑘪𑘲𑘎 𑘦𑘳𑘟𑘝𑘲𑘡𑘹 𑘢𑘐𑘰𑘨𑘲 𑘭𑘳𑘘𑘿𑘧𑘰 𑘠𑘨𑘳𑘡 𑘢𑘿𑘨𑘝𑘿𑘧𑘹𑘎𑘰𑘭 </a></p>
 
