--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,10 +106,10 @@ Share on</span><a href="#"><img src="https://rakshak53.github.io/img/logo/fb.png
 <br/>
 <div class="footer" style="color:#a3a3a3;background-color:#292929;padding:20px 0px 20px 0px;text-align:center;">
 <div style="padding-bottom:20px;">
-<a href="#" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">Home</a>
-<a href="#" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">About</a>
-<a href="#" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">Contact Us</a>
-<a href="#" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">Privacy Policy</a>
+<a href="https://rakshak53.github.io" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">Home</a>
+<a href="https://rakshak53.github.io/about.html" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">About</a>
+<a href="https://rakshak53.github.io/contact-us.html" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">Contact Us</a>
+<a href="https://rakshak53.github.io/privacy.html" style="text-decoration:none;color:#a3a3a3;margin-left:10px;">Privacy Policy</a>
 </div>
 <hr style="margin:0px 50px 0px 50px;border-top:#292929;"/>
 <div style="color:#a3a3a3;padding-top:20px;">2021 | Design by <a href="#" style="text-decoration:none;color:#a3a3a3; font-weight:bold;">@Rakshak</a>
