--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,10 @@
     <link rel="icon" href="favicon.png">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="./evo-calendar/css/evo-calendar.min.css">
-    <link rel="stylesheet" type="text/css" href="./evo-calendar/css/evo-calendar.orange-coral.min.css">
-    <link rel="stylesheet" type="text/css" href="./evo-calendar/css/evo-calendar.midnight-blue.min.css">
-    <link rel="stylesheet" type="text/css" href="./evo-calendar/css/evo-calendar.royal-navy.min.css">
+    <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.min.css">
+    <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.orange-coral.min.css">
+    <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.midnight-blue.min.css">
+    <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.royal-navy.min.css">
 
     <link rel="stylesheet" type="text/css" href="./demo/demo.css">
     <!-- Fonts -->
