--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.midnight-blue.min.css">
     <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.royal-navy.min.css">
 
-    <link rel="stylesheet" type="text/css" href="./demo/demo.css">
+    <link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/demo/demo.css">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
