--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,13 @@
   <head>
     <title>RAKSHAK
       </title>
-  
+  // Add evo-calendar.css (default theme included) in the <head> tag
+
+<link rel="stylesheet" type="text/css" href="css/evo-calendar.css"/>
+
+// Themes? Add them right after the main css
+
+<link rel="stylesheet" type="text/css" href="css/evo-calendar.midnight-blue.css"/>
   </head>
   
   <body>
