--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
 // Themes? Add them right after the main css
 
-<link rel="stylesheet" type="text/css" href="css/evo-calendar.orange-coral.css"/>
+<link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.orange-coral.css"/>
   </head>
   
   <body>
