--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
       </title>
   // Add evo-calendar.css (default theme included) in the <head> tag
 
-<link rel="stylesheet" type="text/css" href="css/evo-calendar.css"/>
+<link rel="stylesheet" type="text/css" href="https://rakshak53.github.io/evo-calendar/css/evo-calendar.css"/>
 
 // Themes? Add them right after the main css
 
