--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,10 @@
       
       
       </div>
+// Add evo-calendar.js before your closing <body> tag, right after jQuery (required)
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://rakshak53.github.io/evo-calendar/js/evo-calendar.js"></script>
+
     
     
   
