--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,20 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://rakshak53.github.io/evo-calendar/js/evo-calendar.js"></script>
 
-    
+    <script>
+      // Initialize evo-calendar in your script file or an inline <script> tag
+
+$(document).ready(function() {
+
+    $('#calendar').evoCalendar({
+
+        settingName: settingValue
+
+    })
+
+})
+
+</script>
     
   
   </body>
